chore: enable Java 21 preview features in Dockerfile and pom.xml