@@ -1,4 +1,3 @@
-# Etapa 1: Build con Maven y Java 21
 FROM eclipse-temurin:21 AS build
 
 WORKDIR /app
@@ -10,13 +9,12 @@ RUN chmod +x mvnw
 RUN ./mvnw dependency:go-offline -B
 
 COPY src ./src
-RUN ./mvnw package -DskipTests -B
+RUN ./mvnw package -DskipTests -B -DcompilerArgs="--enable-preview"
 
-# Etapa 2: Imagen mínima para ejecutar el JAR
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
